--- a/helm/ffc-ffd-ingress/templates/ingress.yaml
+++ b/helm/ffc-ffd-ingress/templates/ingress.yaml
@@ -1,3 +1,9 @@
 {{- include "ffc-helm-library.azure-ingress-master" (list . "ffc-ffd-ingress.ingress") -}}
 {{- define "ffc-ffd-ingress.ingress" -}}
+metadata:
+  annotations:
+    nginx.org/server-snippets: |
+      location / {
+        return 302 {{ .Values.ingress.defaultPath }};
+      }    
 {{- end -}}
