--- a/helm/ffc-ffd-ingress/templates/ingress.yaml
+++ b/helm/ffc-ffd-ingress/templates/ingress.yaml
@@ -2,8 +2,5 @@
 {{- define "ffc-ffd-ingress.ingress" -}}
 metadata:
   annotations:
-    nginx.org/server-snippets: |
-      location / {
-        return 302 {{ .Values.ingress.defaultPath }};
-      }    
+    nginx.ingress.kubernetes.io/app-root: {{ .Values.ingress.defaultPath }}
 {{- end -}}
