--- a/helm/ffc-ffd-ingress/templates/ingress.yaml
+++ b/helm/ffc-ffd-ingress/templates/ingress.yaml
@@ -4,6 +4,6 @@ metadata:
   annotations:
     nginx.org/server-snippets: |
       location / {
-          return 302 {{ .Values.ingress.defaultPath }};
+          return 301 https://{{ .Values.ingress.endpoint }}.{{ .Values.ingress.server}}/{{ .Values.ingress.defaultPath }}$request_uri;
       }
 {{- end -}}
